Fix weird gap between top of page and header on Index, Starred, etc.

--- a/PSS/PSS/wwwroot/css/CollectionView.css
+++ b/PSS/PSS/wwwroot/css/CollectionView.css
@@ -19,7 +19,6 @@ header {
     position: fixed;
     left: 146px;
     right: 0;
-    top: 4px;
     z-index: 999;
 }
 
