--- a/PSS/PSS/wwwroot/css/Trash.css
+++ b/PSS/PSS/wwwroot/css/Trash.css
@@ -20,8 +20,8 @@ header {
     position: fixed;
     left: 146px;
     right: 0;
-    top: 4px;
-    z-index: 999999;
+    z-index: 999;
+    height: 60px;
 }
 
 #selectedAmtText {
@@ -32,11 +32,9 @@ header {
 #clearBtn {
     margin-left: 5px;
     margin-right: 5px;
-    margin-top: 2px;
 }
 
 header > div {
-    margin-top: 6px;
     display: flex;
     align-items: center;
     flex-direction: row;
@@ -53,8 +51,8 @@ header > #sortDiv {
     flex-direction: column;
     justify-content: space-evenly;
     position: absolute;
-    top: 49px;
-    right: 276px;
+    top: 54px;
+    right: 330px;
     background-color: black;
     border: 1px solid white;
     padding-right: 12px;
